css/app.css
html {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  background-color: #8E918D;
  background: url('../img/bg.jpg') no-repeat center center fixed;
  background-size: cover;
  color: #393b40;
  font-family: "Roboto", sans-serif;
  height: 100%;
  margin: 0;
}

::selection {
  background: #bac4cd;
  color: #c0c5ce;
}

.container {
  height: 100%;
  margin: 0 auto;
  padding: 1% 0 2%;
}

.js-text-editor {
  align-items: stretch;
  display: flex;
  flex-flow: column nowrap;
  height: 100%;
  margin: auto;
  max-height: 850px;
  min-height: 550px;
  min-width: 600px;
  padding: 5px;
  width: 75%;
}

.editor-header {
  flex: 0 0 84px;
  height: 84px;
  order: 1;
  padding: 8px;
}

.editor-header a {
  color: #393b40;
  text-decoration: none;
}

.editor-header a:hover {
  color: #73586D;
}

.editor-content {
  align-content: stretch;
  align-items: stretch;
  box-shadow: 6px 6px 1px 0 rgba(34, 34, 40, 0.3);
  display: flex;
  flex: 1;
  flex-flow: row wrap;
  justify-content: flex-start;
  order: 2;
}

@media (max-width: 1080px) {
  .editor-content {
    flex-flow: column nowrap;
  }
}

.editor-footer {
  color: #c3cdc4;
  flex: 0 0 50px;
  order: 3;
  padding: 20px 8px 0;
}

.editor-footer a {
  color: #c3cdc4;
  font-style: italic;
  text-decoration: none;
}

.editor-info {
  display: inline-block;
  font: 300 14px/1.5 "Roboto", sans-serif;
  text-shadow: 2px 2px 2px rgba(34, 34, 40, 0.8);
}

.input-container {
  align-items: stretch;
  background-color: #2e313a;
  display: flex;
  flex: 1;
  flex-flow: column nowrap;
  order: 1;
}

.input-content {
  align-items: stretch;
  background-color: #2e313a;
  display: flex;
  flex: 1;
  flex-flow: column nowrap;
  order: 2;
}

.input-field {
  background-color: #2e313a;
  border: none;
  color: #acb1b1;
  flex: 1;
  font: normal 15px/1.5 "Input Mono", monospace;
  outline: none;
  overflow-y: scroll;
  padding: 12px 12px 12px 52px;
  resize: none;
  white-space: nowrap;
}

.input-footer,
.output-footer {
  background-color: #676c73;
  color: #2a2930;
  flex: 0 0 28px;
  font: normal 14px/1 "Roboto", sans-serif;
  order: 3;
  padding: 8px 16px;
}

.input-header,
.output-header {
  background-color: #2a2930;
  color: #acb1b1;
  flex: 0 0 34px;
  font: normal 14px/1 "Roboto", sans-serif;
  order: 1;
  padding: 10px 20px;
}

.output-container {
  align-items: stretch;
  background-color: #2e313a;
  display: flex;
  flex: 1;
  flex-flow: column nowrap;
  order: 2;
  overflow: hidden;
}

.output-content {
  align-items: stretch;
  background-color: #2e313a;
  display: flex;
  flex: 1;
  flex-flow: row nowrap;
  order: 2;
  overflow-y: scroll;
}

.output-field {
  color: #acb1b1;
  flex: 1;
  order: 2;
}

.output-field,
.output-gutter {
  background-color: #2e313a;
  font: normal 15px/1.5 "Input Mono", monospace;
  padding: 12px 4px 0;
  white-space: pre;
}

.output-gutter {
  color: #7B7F84;
  flex: 0 0 40px;
  order: 1;
  text-align: right;
}

.output-info {
  margin-right: 10px;
}

.active {
  background-color: #272b34;
}

.comment {
  color: #3e4656;
}

.keyword,
.operator {
  color: #26a6a6;
}

.function-property,
.literal,
.method,
.object,
.property,
.value-property {
  color: #E5615B;
}

.number,
.regular-expression,
.string {
  color: #C1B852;
}

.whitespace {
  color: #40444d;
}

